# rpi-api-example

./: .env-example  .gitignore  Cargo.toml  README.md
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: main.rs  valve.rs  valve_withoutstuff.rs  valvz.rs
