[workspace]
members = [
    "prisma-cli",
]

[package]
name = "sqlite-prisma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.7"
default-features = false
features = ["sqlite"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
dotenv = "0.15.0"
rppal = "0.14.1"
simple-signal = "1.1.1"

