[package]
name = "rpi-api-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.2.0"
rppal = "0.14.1"
